--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
+import org.jetbrains.kotlin.gradle.dsl.JvmTarget
+
 plugins {
     id 'java'
     id 'org.jetbrains.kotlin.jvm' version '1.9.0-Beta'
@@ -17,6 +19,17 @@ repositories {
         name = "sonatype"
         url = "https://oss.sonatype.org/content/groups/public/"
     }
+    maven {
+        url = "https://jitpack.io"
+    }
+    maven {
+        name = "minebench-repo"
+        url = "https://repo.minebench.de"
+    }
+    maven {
+        name = "codemc-snapshots"
+        url = "https://repo.codemc.io/repository/maven-snapshots/"
+    }
 }
 
 dependencies {
@@ -26,6 +39,12 @@ dependencies {
     implementation "org.jetbrains.exposed:exposed-core:0.40.1"
     implementation "org.jetbrains.exposed:exposed-dao:0.40.1"
     implementation "org.jetbrains.exposed:exposed-jdbc:0.40.1"
+    implementation "org.jetbrains.exposed:exposed-java-time:0.40.1"
+
+    compileOnly "com.github.MilkBowl:VaultAPI:1.7"
+    implementation "dev.jorel:commandapi-bukkit-shade:9.1.0"
+    implementation "de.themoep:inventorygui:1.6.1-SNAPSHOT"
+    implementation "net.wesjd:anvilgui:1.7.0-SNAPSHOT"
 }
 
 def targetJavaVersion = 17
@@ -53,7 +72,21 @@ processResources {
     }
 }
 
+compileKotlin {
+    compilerOptions {
+        jvmTarget.set(JvmTarget.JVM_17)
+    }
+}
+
+compileTestKotlin {
+    compilerOptions {
+        jvmTarget.set(JvmTarget.JVM_17)
+    }
+}
+
 shadowJar {
+    relocate("net.wesjd.anvilgui", "jp.xhw.noticebox.libs.anvilgui")
+    relocate("dev.jorel.commandapi", "jp.xhw.noticebox.libs.commandapi")
     archiveFileName = "${rootProject.name}-${project.version}.jar"
 }
 tasks.build.dependsOn tasks.shadowJar
